# gcop-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README_ZH.md  TODO.md
.gcop/: config.toml
.github/workflows/: ci.yml  release.yml  vitepress.yml
docs/: aliases.md  commands.md  configuration.md  index.md  installation.md  package.json
docs/.vitepress/: config.ts
docs/guide/: about.md  aliases.md  commands.md  configuration.md  installation.md  prompts.md  provider-health.md  providers.md  troubleshooting.md
docs/release-notes/: v0.1.2.md  v0.1.3.md  v0.1.5.md  v0.10.0.md  v0.11.0.md  v0.11.1.md  v0.12.0.md  v0.12.1.md  v0.12.2.md  v0.13.0.md  v0.13.1.md  v0.13.2.md  v0.13.3.md  v0.13.4.md  v0.13.5.md  v0.13.6.md  v0.13.7.md  v0.13.8.md  v0.13.9.md  v0.4.3.md  v0.5.0.md  v0.5.1.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v0.7.1.md  v0.7.2.md  v0.7.3.md  v0.8.0.md  v0.9.0.md  v0.9.1.md
docs/zh/: aliases.md  commands.md  index.md  installation.md
examples/: config.toml.example  config.toml.example.zh  project-config.toml.example  project-config.toml.example.zh  test_git_ops.rs
homebrew/: gcop-rs.rb
locales/: en.yml  zh-CN.yml
python/: README.md  pyproject.toml
python/src/gcop_rs/: __init__.py
src/: cli.rs  constants.rs  error.rs  lib.rs  main.rs
src/config/: mod.rs  (+5 more)
tests/: alias_test.rs  commit_integration_test.rs  commit_main_loop_test.rs  git_commit_test.rs  git_repository_test.rs  integration_test.rs  project_config_test.rs  provider_validation_test.rs  review_command_test.rs  stats_contrib_test.rs  stats_test.rs  workspace_e2e_test.rs
(+136 files in other folders)
